Added support for loading custom .proto files

--- a/media/sidebar/webview.html
+++ b/media/sidebar/webview.html
@@ -17,8 +17,7 @@
 		<br /><br />
 		<input type="text" id="messageInput" placeholder="Enter message" />
 		<button id="sendButton">Speak</button>
-
-		<input type="file" id="protoFile" />
+		<button id="protoPicker">Choose Proto File</button>
 
 		<script src="script.js"></script>
 	</body>
