--- a/media/sidebar/webview.html
+++ b/media/sidebar/webview.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="stylesheet" type="text/css" href="styles.css" />
 		<title>GUI Toolbox</title>
 	</head>
 	<body>
@@ -17,7 +17,7 @@
 		<br /><br />
 		<input type="text" id="messageInput" placeholder="Enter message" />
 		<button id="sendButton">Speak</button>
-		<button id="protoPicker">Choose Proto File</button>
+		<input type="file" id="protoFile" />
 
 		<script src="script.js"></script>
 	</body>
