Send message on updated value.

--- a/media/sidebar/webview.html
+++ b/media/sidebar/webview.html
@@ -13,11 +13,12 @@
 			placeholder="Enter IP Address"
 			value="localhost"
 		/>
-		<button id="startButton">Listen</button>
 		<br /><br />
-		<input type="text" id="messageInput" placeholder="Enter message" />
-		<button id="sendButton">Speak</button>
+		<input type="text" id="messageInput" placeholder="Enter command" />
+		<br /><br />
 		<input type="file" id="protoFile" />
+		<br /><br />
+		<button id="startButton">Start</button>
 
 		<script src="script.js"></script>
 	</body>
