--- a/media/sidebar/webview.html
+++ b/media/sidebar/webview.html
@@ -13,12 +13,10 @@
 			placeholder="Enter IP Address"
 			value="localhost"
 		/>
-		<br /><br />
-		<input type="text" id="messageInput" placeholder="Enter command" />
-		<br /><br />
 		<input type="file" id="protoFile" />
-		<br /><br />
+        <br></br>
 		<button id="startButton">Start</button>
+        <input type="text" id="messageInput" placeholder=">>> console" />
 
 		<script src="script.js"></script>
 	</body>
