Added basic real-time plotting.

--- a/media/sidebar/webview.html
+++ b/media/sidebar/webview.html
@@ -15,6 +15,8 @@
 		/>
 		<input type="file" id="protoFile" />
         <br></br>
+        <button id="addGUIPanelButton">Add GUI Panel</button>
+        <br></br>
 		<button id="startButton">Start</button>
         <input type="text" id="messageInput" placeholder=">>> console" />
 
