--- a/media/gui/index.html
+++ b/media/gui/index.html
@@ -5,18 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>GUI Panel</title>
 		<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-		<style>
-			body {
-				font-family: Arial, sans-serif;
-			}
-			#variableSelect {
-				margin-bottom: 10px;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
 	<body>
-		<select id="variableSelect"></select>
 		<div id="plot"></div>
+		<select id="variableSelect"></select>
 		<script>
 			const VARIABLES = []; // This will be replaced with actual variables
 		</script>
