--- a/media/gui/index.html
+++ b/media/gui/index.html
@@ -8,8 +8,19 @@
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
 	<body>
-		<div id="plot"></div>
 		<select id="variableSelect"></select>
+		<div id="axisControls">
+			<div>
+				<label for="yMin">Y Min:</label>
+				<input type="number" id="yMin" placeholder="Auto" />
+			</div>
+			<div>
+				<label for="yMax">Y Max:</label>
+				<input type="number" id="yMax" placeholder="Auto" />
+			</div>
+			<button id="applyYAxis">Apply</button>
+		</div>
+		<div id="plot"></div>
 		<script>
 			const VARIABLES = []; // This will be replaced with actual variables
 		</script>
