--- a/media/sidebar/index.html
+++ b/media/sidebar/index.html
@@ -15,9 +15,9 @@
 		/>
 		<input type="file" id="protoFile" />
         <br></br>
-        <button id="addGUIPanelButton">Add GUI Panel</button>
+		<button id="startButton">Connect</button>
         <br></br>
-		<button id="startButton">Start</button>
+		<button id="openGUIPanelButton">Open GUI</button>
         <input type="text" id="messageInput" placeholder=">>> console" />
 
 		<script src="script.js"></script>
