Added frontend for adding buttons.

--- a/media/sidebar/index.html
+++ b/media/sidebar/index.html
@@ -37,6 +37,16 @@
 			</div>
 		</div>
 
+		<div class="buttonInputs">
+			<h3>Buttons</h3>
+			<div id="buttonInputsContainer"></div>
+			<div id="buttonInputsButtons">
+				<button onclick="addButtonInputs()">Add</button>
+				<button onclick="setButtonInputs()">Set</button>
+				<button onclick="removeButtonInputs()">Remove</button>
+			</div>
+		</div>
+
 		<button id="openGUIPanelButton">Open GUI</button>
 		<input type="text" id="messageInput" placeholder=">>> console" />
 
