Added variable inputs to the gui panel.

--- a/media/gui/index.html
+++ b/media/gui/index.html
@@ -8,7 +8,8 @@
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
 	<body>
-		<div>
+		<div id="guiElementsContainer">
+			<div id="variableInputsContainer"></div>
 			<p>
 				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi
 				at neque provident nostrum rem, optio quos ab tenetur asperiores
@@ -42,6 +43,7 @@
 
 		<script>
 			const VARIABLES = []; // This will be replaced with actual variables
+			const VARIABLE_INPUTS = [];
 		</script>
 		<script src="script.js"></script>
 	</body>
