Added gui frontend for sliders and variable inputs.

--- a/media/gui/index.html
+++ b/media/gui/index.html
@@ -9,13 +9,12 @@
 	</head>
 	<body>
 		<div id="guiElementsContainer">
-			<div id="variableInputsContainer"></div>
-			<p>
-				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi
-				at neque provident nostrum rem, optio quos ab tenetur asperiores
-				enim maiores doloremque placeat laborum eum facilis labore
-				voluptatum cumque vitae?
-			</p>
+			<div id="variableInputsContainer">
+				<h3>Variables</h3>
+			</div>
+			<div id="slidersContainer">
+				<h3>Sliders</h3>
+			</div>
 		</div>
 		<div id="plotContainer">
 			<div id="plot"></div>
@@ -43,7 +42,9 @@
 
 		<script>
 			const VARIABLES = []; // This will be replaced with actual variables
-			const VARIABLE_INPUTS = [];
+			const VARIABLE_INPUTS = []; // This will be replaced with actual variable inputs
+			const SLIDERS = []; // This will be replaced with actual sliders
+			const BUTTONS = []; // This will be replaced with actual buttons
 		</script>
 		<script src="script.js"></script>
 	</body>
