Fixed variables and receiving.

--- a/media/gui/index.html
+++ b/media/gui/index.html
@@ -10,10 +10,12 @@
 	<body>
 		<div id="guiElementsContainer">
 			<div id="variableInputsContainer">
-				<h3>Variables</h3>
+				<h3 id="variableInputsHeading">Variables</h3>
+				<button onclick="sendVariableInputs()">Update</button>
 			</div>
 			<div id="slidersContainer">
-				<h3>Sliders</h3>
+				<h3 id="slidersHeading">Sliders</h3>
+				<button onclick="sendSliderValues()">Update</button>
 			</div>
 		</div>
 		<div id="plotContainer">
