Added support for callbacks.

--- a/media/gui/index.html
+++ b/media/gui/index.html
@@ -15,7 +15,10 @@
 			<div id="slidersContainer">
 				<h3 id="slidersHeading">Sliders</h3>
 			</div>
-			<button onclick="sendVariableInputs()">Update</button>
+			<button onclick="sendVariables()">Update</button>
+			<div id="buttonsContainer">
+				<h3 id="buttonsHeading">Buttons</h3>
+			</div>
 		</div>
 		<div id="plotContainer">
 			<div id="plot"></div>
