--- a/media/sidebar/index.html
+++ b/media/sidebar/index.html
@@ -41,9 +41,9 @@
 			<h3>Buttons</h3>
 			<div id="buttonInputsContainer"></div>
 			<div id="buttonInputsButtons">
-				<button onclick="addButtonInputs()">Add</button>
-				<button onclick="setButtonInputs()">Set</button>
-				<button onclick="removeButtonInputs()">Remove</button>
+				<button onclick="addButton()">Add</button>
+				<button onclick="setButtons()">Set</button>
+				<button onclick="removeButton()">Remove</button>
 			</div>
 		</div>
 
