Removed set buttons for all three.

--- a/media/sidebar/index.html
+++ b/media/sidebar/index.html
@@ -18,33 +18,33 @@
 		<button id="startButton">Connect</button>
 
 		<div class="variableInputs">
-			<h3>Variables</h3>
-			<div id="variableInputsContainer"></div>
-			<div id="variableInputsButtons">
-				<button onclick="addVariableInput()">Add</button>
-				<button onclick="setVariableInputs()">Set</button>
-				<button onclick="removeVariableInput()">Remove</button>
+			<div class="inputsHeading">
+				<button onclick="addVariableInput()">+</button>
+				<h3>Variables</h3>
+				<button onclick="removeVariableInput()">-</button>
 			</div>
+
+			<div id="variableInputsContainer"></div>
 		</div>
 
 		<div class="sliderInputs">
-			<h3>Sliders</h3>
-			<div id="sliderInputsContainer"></div>
-			<div id="sliderInputsButtons">
-				<button onclick="addSliderInput()">Add</button>
-				<button onclick="setSliderInputs()">Set</button>
-				<button onclick="removeSliderInput()">Remove</button>
+			<div class="inputsHeading">
+				<button onclick="addSliderInput()">+</button>
+				<h3>Sliders</h3>
+				<button onclick="removeSliderInput()">-</button>
 			</div>
+
+			<div id="sliderInputsContainer"></div>
 		</div>
 
 		<div class="buttonInputs">
-			<h3>Buttons</h3>
-			<div id="buttonInputsContainer"></div>
-			<div id="buttonInputsButtons">
-				<button onclick="addButton()">Add</button>
-				<button onclick="setButtons()">Set</button>
-				<button onclick="removeButton()">Remove</button>
+			<div class="inputsHeading">
+				<button onclick="addButton()">+</button>
+				<h3>Buttons</h3>
+				<button onclick="removeButton()">-</button>
 			</div>
+
+			<div id="buttonInputsContainer"></div>
 		</div>
 
 		<button id="openGUIPanelButton">Open GUI</button>
