Fixed buttons styling.

--- a/media/sidebar/index.html
+++ b/media/sidebar/index.html
@@ -19,9 +19,16 @@
 
 		<div class="variableInputs">
 			<div class="inputsHeading">
-				<button onclick="addVariableInput()">+</button>
+				<button onclick="addVariableInput()" class="addSubtractButtons">
+					+
+				</button>
 				<h3>Variables</h3>
-				<button onclick="removeVariableInput()">-</button>
+				<button
+					onclick="removeVariableInput()"
+					class="addSubtractButtons"
+				>
+					-
+				</button>
 			</div>
 
 			<div id="variableInputsContainer"></div>
@@ -29,9 +36,16 @@
 
 		<div class="sliderInputs">
 			<div class="inputsHeading">
-				<button onclick="addSliderInput()">+</button>
+				<button onclick="addSliderInput()" class="addSubtractButtons">
+					+
+				</button>
 				<h3>Sliders</h3>
-				<button onclick="removeSliderInput()">-</button>
+				<button
+					onclick="removeSliderInput()"
+					class="addSubtractButtons"
+				>
+					-
+				</button>
 			</div>
 
 			<div id="sliderInputsContainer"></div>
@@ -39,9 +53,13 @@
 
 		<div class="buttonInputs">
 			<div class="inputsHeading">
-				<button onclick="addButton()">+</button>
+				<button onclick="addButton()" class="addSubtractButtons">
+					+
+				</button>
 				<h3>Buttons</h3>
-				<button onclick="removeButton()">-</button>
+				<button onclick="removeButton()" class="addSubtractButtons">
+					-
+				</button>
 			</div>
 
 			<div id="buttonInputsContainer"></div>
