Removed unwanted functions and commands.

--- a/media/sidebar/index.html
+++ b/media/sidebar/index.html
@@ -65,8 +65,7 @@
 			<div id="buttonInputsContainer"></div>
 		</div>
 
-		<button id="openGUIPanelButton">Open GUI</button>
-		<input type="text" id="messageInput" placeholder=">>> console" />
+		<button id="openGUIPanelButton">Open / Refresh GUI</button>
 
 		<script src="script.js"></script>
 	</body>
