Added frontend for saving and loading gui.

--- a/media/sidebar/index.html
+++ b/media/sidebar/index.html
@@ -67,6 +67,11 @@
 
 		<button id="openGUIPanelButton">Open / Refresh GUI</button>
 
+		<div class="guiUtility">
+			<button id="saveGUIPanelButton">Save GUI</button>
+			<button id="loadGUIPanelButton">Load GUI</button>
+		</div>
+
 		<script src="script.js"></script>
 	</body>
 </html>
