Added a way to save and load sidebar panel.

--- a/media/sidebar/index.html
+++ b/media/sidebar/index.html
@@ -72,6 +72,12 @@
 			<button id="loadGUIPanelButton">Load GUI</button>
 		</div>
 
+		<script>
+			const VARIABLE_INPUTS = []; // This will be replaced with actual variable inputs
+			const SLIDERS = []; // This will be replaced with actual sliders
+			const BUTTONS = []; // This will be replaced with actual buttons
+		</script>
+
 		<script src="script.js"></script>
 	</body>
 </html>
