Added a disconnect button.

--- a/media/sidebar/index.html
+++ b/media/sidebar/index.html
@@ -15,7 +15,10 @@
 		/>
 		<input type="file" id="protoFile" />
 
-		<button id="startButton">Connect</button>
+		<div class="guiUtility">
+			<button id="startButton">Connect</button>
+			<button id="stopButton">Disconnect</button>
+		</div>
 
 		<div class="variableInputs">
 			<div class="inputsHeading">
