Fixed styling for plot controls.

--- a/media/gui/index.html
+++ b/media/gui/index.html
@@ -15,7 +15,6 @@
 			<div id="slidersContainer">
 				<h3 id="slidersHeading">Sliders</h3>
 			</div>
-			<button onclick="sendVariables()">Update</button>
 			<div id="buttonsContainer">
 				<h3 id="buttonsHeading">Buttons</h3>
 			</div>
@@ -40,6 +39,7 @@
 
 					<button onclick="addTrace()">Add Trace</button>
 					<button onclick="removeTrace()">Remove Trace</button>
+					<button onclick="sendVariables()">Update Variables</button>
 				</div>
 			</div>
 		</div>
