Fixed remove variable input bug and added more styling changes.

--- a/media/gui/index.html
+++ b/media/gui/index.html
@@ -9,15 +9,9 @@
 	</head>
 	<body>
 		<div id="guiElementsContainer">
-			<div id="variableInputsContainer">
-				<h3 id="variableInputsHeading">Variables</h3>
-			</div>
-			<div id="slidersContainer">
-				<h3 id="slidersHeading">Sliders</h3>
-			</div>
-			<div id="buttonsContainer">
-				<h3 id="buttonsHeading">Buttons</h3>
-			</div>
+			<div id="variableInputsContainer" style="display: none"></div>
+			<div id="slidersContainer" style="display: none"></div>
+			<div id="buttonsContainer" style="display: none"></div>
 		</div>
 		<div id="plotContainer">
 			<div id="plot"></div>
